some more tweaks

--- a/src/main/ui/app/styles/messages.scss
+++ b/src/main/ui/app/styles/messages.scss
@@ -5,9 +5,12 @@
 
   img {
     position: relative;
-    top: -5px;
+    top: -7px;
     left: -5px;
     height: auto;
     width: 32px;
+  }
+  .media-left {
+    padding-right: 0px;
   }
 }
